@@ -35,6 +35,8 @@ Ongoing Goals
 
 Changes up to 0.58
 
+   * fixed half-decade old logic bug in MemoryDebug (blush!).
+
    * "alter" and "alter_state" given a 50% performance boost
 
    * added a coarse hydrogen-bond assessment feature (internal)
